<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/str_traffic_violation"
        android:textColor="@color/white"
        android:textSize="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">



        <EditText
            android:id="@+id/edtDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:hint="@string/str_driver"
            android:inputType="text"
            android:padding="10dp"/>



        <EditText
            android:id="@+id/edtPlugedNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:hint="@string/str_pluggedNumber"
            android:inputType="textPassword|number"
            android:padding="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/bg_btn_login"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:id="@+id/btnLogin"
            android:text="@string/btn_login"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/bg_btn_login"
            android:paddingLeft="25dp"
            android:id="@+id/btnRegister"
            android:paddingRight="25dp"
            android:text="@string/btn_register"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>